{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 13,
  "lineage": "d4dd326b-b154-6b4f-1674-1fe9eecd637d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:733623648530:instance/i-0df3e9f8575ea0ef5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df3e9f8575ea0ef5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrakey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c89f48972f9612c3",
            "private_dns": "ip-10-0-1-171.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.171",
            "public_dns": "ec2-34-242-208-160.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.208.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004c0eb207ba6fa9c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06de27b6d58c6b1bf",
            "tags": {
              "Name": "fabric-public-ec2"
            },
            "tags_all": {
              "Name": "fabric-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d7f1909489812db"
            ]
          },
          "dependencies": [
            "aws_key_pair.terrakey",
            "aws_security_group.allow_traffic",
            "aws_subnet.publicsubnet",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:internet-gateway/igw-0ee1f504d0ef9c30a",
            "id": "igw-0ee1f504d0ef9c30a",
            "owner_id": "733623648530",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-04aa7fda48ca13fd4"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igwroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:route-table/rtb-02a3e517d4264feb6",
            "id": "rtb-02a3e517d4264feb6",
            "owner_id": "733623648530",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee1f504d0ef9c30a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igwroute"
            },
            "tags_all": {
              "Name": "igwroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-04aa7fda48ca13fd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicsubnetassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88ccfaaf3286e1d",
            "route_table_id": "rtb-02a3e517d4264feb6",
            "subnet_id": "subnet-06de27b6d58c6b1bf"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.igwroute",
            "aws_subnet.publicsubnet",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:security-group/sg-02d7f1909489812db",
            "description": "Allow TCP inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-02d7f1909489812db",
            "ingress": [],
            "name": "allow_tcp",
            "name_prefix": "",
            "owner_id": "733623648530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_TCP"
            },
            "tags_all": {
              "Name": "allow_TCP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04aa7fda48ca13fd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:subnet/subnet-06de27b6d58c6b1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06de27b6d58c6b1bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733623648530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mainpublic"
            },
            "tags_all": {
              "Name": "mainpublic"
            },
            "vpc_id": "vpc-04aa7fda48ca13fd4"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:vpc/vpc-04aa7fda48ca13fd4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d687a77ce9996ed",
            "default_route_table_id": "rtb-04c1cb0537a7b0934",
            "default_security_group_id": "sg-06612991a9649543f",
            "dhcp_options_id": "dopt-0a91601f942556652",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04aa7fda48ca13fd4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c1cb0537a7b0934",
            "owner_id": "733623648530",
            "tags": {
              "Name": "fabricVPC"
            },
            "tags_all": {
              "Name": "fabricVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:security-group-rule/sgr-0dffeff30069c90df",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0dffeff30069c90df",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02d7f1909489812db",
            "security_group_rule_id": "sgr-0dffeff30069c90df",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_connection_to_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:security-group-rule/sgr-028d11fbba00584ce",
            "cidr_ipv4": "104.30.176.2/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 27017,
            "id": "sgr-028d11fbba00584ce",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02d7f1909489812db",
            "security_group_rule_id": "sgr-028d11fbba00584ce",
            "tags": null,
            "tags_all": {},
            "to_port": 27019
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:security-group-rule/sgr-0b78d864d83e50905",
            "cidr_ipv4": "104.30.176.2/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b78d864d83e50905",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02d7f1909489812db",
            "security_group_rule_id": "sgr-0b78d864d83e50905",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:733623648530:security-group-rule/sgr-0d041e856fa0a8285",
            "cidr_ipv4": "77.107.233.162/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d041e856fa0a8285",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02d7f1909489812db",
            "security_group_rule_id": "sgr-0d041e856fa0a8285",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_traffic",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    }
  ]
}